[gd_scene load_steps=27 format=2]

[ext_resource path="res://Musica/sound-14.mp3" type="AudioStream" id=1]
[ext_resource path="res://Musica/sound-2.mp3" type="AudioStream" id=2]
[ext_resource path="res://Imagenes/Pal gei/SELECCIONNIVEL212.png" type="Texture" id=3]
[ext_resource path="res://Musica/X2Download.com - Arthur Benson - The Friendly Ghost (128 kbps).mp3" type="AudioStream" id=4]
[ext_resource path="res://Imagenes/Pal gei/nivel_2_fig_21.png" type="Texture" id=5]
[ext_resource path="res://Imagenes/Pal gei/flecha21NEGRA.png" type="Texture" id=6]
[ext_resource path="res://Imagenes/nivel3/fig41oscura.png" type="Texture" id=7]
[ext_resource path="res://Imagenes/Pal gei/SELECCIONNIVEL213.png" type="Texture" id=8]
[ext_resource path="res://Imagenes/Pal gei/fig41111.png" type="Texture" id=9]
[ext_resource path="res://Imagenes/nivel3/figoscura2.png" type="Texture" id=10]
[ext_resource path="res://Imagenes/Pal gei/flecha21.png" type="Texture" id=11]
[ext_resource path="res://Imagenes/nivel3/nivel_2_fig_21oscura.png" type="Texture" id=12]
[ext_resource path="res://Musica/sound-9.mp3" type="AudioStream" id=13]
[ext_resource path="res://Imagenes/Pal gei/SELECCIONNIIVEL21.png" type="Texture" id=14]
[ext_resource path="res://Imagenes/Pal gei/regree2221111negro.png" type="Texture" id=15]
[ext_resource path="res://Imagenes/Pal gei/regree2221111.png" type="Texture" id=16]
[ext_resource path="res://Imagenes/Pal gei/fig321112.png" type="Texture" id=17]
[ext_resource path="res://Scrips/Nivel_2.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]
resource_name = "Cmabio"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Intro"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Izq:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -700, -100 ), Vector2( -800, -100 ), Vector2( -700, -100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Der:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 700, -100 ), Vector2( 800, -100 ), Vector2( 700, -100 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Izq:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -700, -100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Der:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 700, -100 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Intro"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "salida_niveles"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Nivel_2" type="Node2D"]
script = ExtResource( 18 )

[node name="Cuadrado" type="Node2D" parent="."]

[node name="Nivel1Mayas" type="Sprite" parent="Cuadrado"]
position = Vector2( 960, 540 )
texture = ExtResource( 14 )

[node name="TextureButton" type="TextureButton" parent="Cuadrado"]
margin_left = 890.0
margin_top = 406.0
margin_right = 1160.0
margin_bottom = 676.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triangulo" type="Node2D" parent="."]

[node name="Vac√≠ostriangulos" type="Sprite" parent="Triangulo"]
position = Vector2( 2812, 540 )
scale = Vector2( 0.929332, 1 )
texture = ExtResource( 3 )

[node name="Triangulos" type="TextureButton" parent="Triangulo"]
margin_left = 2679.0
margin_top = 437.0
margin_right = 2924.0
margin_bottom = 692.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hexagono" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Hexagono"]
position = Vector2( 4662, 540 )
texture = ExtResource( 8 )

[node name="Hexagonos" type="TextureButton" parent="Hexagono"]
margin_left = 4534.0
margin_top = 411.0
margin_right = 4804.0
margin_bottom = 681.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cambio_de_posicion_intro2" type="AnimationPlayer" parent="Hexagono"]
root_node = NodePath("../../Camera2D")
anims/Cmabio = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 963, 538 )
current = true

[node name="salir" type="TextureButton" parent="Camera2D"]
margin_left = -932.0
margin_top = -502.0
margin_right = -794.0
margin_bottom = -364.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Izq" type="TextureButton" parent="Camera2D"]
margin_left = -700.0
margin_top = -100.0
margin_right = -574.0
margin_bottom = 124.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Der" type="TextureButton" parent="Camera2D"]
margin_left = 700.0
margin_top = -100.0
margin_right = 826.0
margin_bottom = 124.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
margin_left = -968.0
margin_top = -545.0
margin_right = 978.0
margin_bottom = 561.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="AnimationPlayer" parent="Camera2D"]
autoplay = "Intro"
anims/Intro = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="salida" type="AnimationPlayer" parent="Camera2D"]
anims/Intro = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="salida_level" type="AnimationPlayer" parent="Camera2D"]
anims/RESET = SubResource( 7 )
anims/salida_niveles = SubResource( 8 )

[node name="Salir2" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource( 1 )
volume_db = 10.0

[node name="Seleccion" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -16.0

[node name="selec_figura" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 10.0

[connection signal="pressed" from="Cuadrado/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Triangulo/Triangulos" to="." method="_on_Triangulos_pressed"]
[connection signal="pressed" from="Hexagono/Hexagonos" to="." method="_on_Hexagonos_pressed"]
[connection signal="pressed" from="Camera2D/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Camera2D/Izq" to="." method="_on_Izq_pressed"]
[connection signal="pressed" from="Camera2D/Der" to="." method="_on_Der_pressed"]
[connection signal="animation_finished" from="Camera2D/salida" to="." method="_on_salida_animation_finished"]
[connection signal="animation_finished" from="Camera2D/salida_level" to="." method="_on_salida_level_animation_finished"]
